tests/test_typing/bad/err4.catala_en
> Include: common.catala_en

```catala
scope S:
  definition z equals [ Int content x ]
  definition a equals number of (z ++ z) / 2
```

```catala-test-inline
$ catala Typecheck
[RESULT] Typechecking successful!
```
